--- a/StorageAccessCrawler/src/requirements.txt
+++ b/StorageAccessCrawler/src/requirements.txt
@@ -1,5 +1,5 @@
 numpy==1.26.2
-playwright==1.44.0
+playwright==1.46.0
 psycopg2==2.9.9
 scikit-learn==1.3.2
 tld==0.13
@@ -9,3 +9,5 @@ retirejs==1.5
 jupyterlab==4.0.9
 pandas==2.1.3
 matplotlib==3.8.2
+kaleido==0.2.1
+plotly==5.23.0
